--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,14 +1,14 @@
 [preset.0]
 
-name="HTML5"
-platform="HTML5"
+name="Web"
+platform="Web"
 runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/index.html"
+export_path="build/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
