--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -1,5 +1,7 @@
-name: "godot-ci export"
-on: [push]
+name: "godot-ci web export"
+on:
+  push:
+    branches: [main]
 
 permissions:
   id-token: write
